--- a/src/components/Addpage/Addpage.css
+++ b/src/components/Addpage/Addpage.css
@@ -2,3 +2,8 @@
     margin-left: 20px;
     background-color: rgb(243, 110, 110);
 }
+@media only screen and (max-width:688px) {
+    .form-container{
+        width: 98%;
+    }
+}
